--- a/Survey Form/index.html
+++ b/Survey Form/index.html
@@ -68,7 +68,7 @@
                <label><input name="prefer" value="additional-courses" type="checkbox" class="input-checkbox">Additional Courses</label>
             </div>
             <div class="form-group">
-               <p>Any comments or suggestions?</p>
+               <p>Is there any comments or suggestions?</p>
                <textarea id="comments" class="input-textarea" name="comment" placeholder="Enter your comment here..."></textarea>
             </div>
             <div class="form-group">
